@@ -103,4 +103,5 @@ p = 5:
 11: 1
 -1
 -1
-Total time spent: 1052
+1
+Total time spent: 1084
